<resources>
    <string name="app_name">Course Work</string>
    <string name="login">логин</string>
    <string name="pass">пароль</string>
    <string name="repeat_pass">повтор пароля</string>
    <string name="submit">подтвердить</string>
    <string name="add_button">добавить</string>
    <string name="textmess">наименование траты</string>
    <string name="count">сумма траты</string>
    <string name="steing">название настройки</string>
    <string name="opis">описание на много слов. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys
        standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>


</resources>
