<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/activity_quiz"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:background="#9CDDE4"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp">

            <EditText
                android:id="@+id/login_reg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/login">

            </EditText>

            <EditText
                android:id="@+id/password_reg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/pass">

            </EditText>

            <EditText
                android:id="@+id/repear_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/repeat_pass">

            </EditText>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="submit">

            </Button>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>