<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_green">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_margin="5dp"
                android:background="@drawable/user">

            </ImageView>

            <Button
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_margin="5dp"
                android:background="@drawable/img"
                android:layout_gravity="end">
            </Button>

        </FrameLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints"
            android:background="@color/light_green"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_margin="30dp">

            <ImageView
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:background="@drawable/bowling"
                android:layout_margin="5dp">

            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textSize="20dp"
                android:text="@string/textmess">

            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:layout_margin="10dp"
                android:textSize="20dp"
                android:text="@string/count">

            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/opis"
                android:textSize="20dp">

            </TextView>
        </LinearLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="64dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:background="@color/red"
            android:text="назад">
        </Button>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>